--- a/.gitignore
+++ b/.gitignore
@@ -87,6 +87,9 @@ celerybeat-schedule
 venv/
 ENV/
 
+# Idea project settings
+.idea
+
 # Spyder project settings
 .spyderproject
 .spyproject
@@ -99,3 +102,6 @@ ENV/
 
 # mypy
 .mypy_cache/
+
+# serverless settings
+serverless.yml
